# ETL-Financeiro

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_financial_metrics.py
app/: __init__.py
app/api/: dependencies.py  factory.py  health.py  routes_etl.py
app/core/: config.py  logging_config.py  schedule_runner.py
app/db/: base.py  session.py
app/models/: __init__.py  financial_metric.py
app/repositories/: financial_repository.py
app/services/: etl_service.py  report_service.py
docker/: Dockerfile  backend-entry.sh
project/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
project/alembic/: env.py
project/alembic/versions/: 20260509120000_initial_schema.py
project/app/: __init__.py  main.py
project/app/ai/providers/: __init__.py
project/app/ai/services/: __init__.py
project/app/api/dependencies/: auth.py  db.py
project/app/api/routes/: auth.py  health.py
project/app/core/: celery_app.py  config.py  exceptions.py  logger.py  security.py
project/app/db/: session.py
project/app/models/: __init__.py  user.py
project/app/repositories/: audit_repository.py  refresh_token_repository.py  user_repository.py
project/app/schemas/: auth.py
project/app/services/: auth_service.py
project/app/tests/: conftest.py  test_health.py  test_security.py
project/app/utils/: http.py  retry.py
project/docker/: Dockerfile  backend-entry.sh
scripts/: wait_for_db.py
(+19 files in other folders)
