[project]
name = "sistema-minutas-ia"
version = "0.1.0"
description = "Sistema Inteligente de Emissão de Minutas com IA"
readme = "README.md"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"
exclude = "/(\\.venv|venv|alembic\\/versions)/"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
